kubernetes/samples/quick-start/ingress-route.yaml
# Copyright (c) 2022, Oracle and/or its affiliates.
# Licensed under the Universal Permissive License v 1.0 as shown at https://oss.oracle.com/licenses/upl.

apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: console
  namespace: sample-domain1-ns
spec:
  routes:
    - kind: Rule
      match: PathPrefix(`/console`)
      services:
        - kind: Service
          name: sample-domain1-admin-server
          port: 7001
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: quickstart
  namespace: sample-domain1-ns
spec:
  routes:
  - kind: Rule
    match: PathPrefix(`/quickstart`)
    services:
    - kind: Service
      name: sample-domain1-cluster-cluster-1
      port: 8001
